; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_stack.c_redcarpet_stack_grow.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_stack.c_redcarpet_stack_grow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stack = type { i64, i8**, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redcarpet_stack_grow(%struct.stack* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.stack*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  store %struct.stack* %0, %struct.stack** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.stack*, %struct.stack** %4, align 8
  %8 = getelementptr inbounds %struct.stack, %struct.stack* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp uge i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %52

13:                                               ; preds = %2
  %14 = load %struct.stack*, %struct.stack** %4, align 8
  %15 = getelementptr inbounds %struct.stack, %struct.stack* %14, i32 0, i32 1
  %16 = load i8**, i8*** %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = mul i64 %17, 8
  %19 = call i8** @realloc(i8** %16, i64 %18)
  store i8** %19, i8*** %6, align 8
  %20 = load i8**, i8*** %6, align 8
  %21 = icmp eq i8** %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %13
  store i32 -1, i32* %3, align 4
  br label %52

23:                                               ; preds = %13
  %24 = load i8**, i8*** %6, align 8
  %25 = load %struct.stack*, %struct.stack** %4, align 8
  %26 = getelementptr inbounds %struct.stack, %struct.stack* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = getelementptr inbounds i8*, i8** %24, i64 %27
  %29 = load i64, i64* %5, align 8
  %30 = load %struct.stack*, %struct.stack** %4, align 8
  %31 = getelementptr inbounds %struct.stack, %struct.stack* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = sub i64 %29, %32
  %34 = mul i64 %33, 8
  %35 = call i32 @memset(i8** %28, i32 0, i64 %34)
  %36 = load i8**, i8*** %6, align 8
  %37 = load %struct.stack*, %struct.stack** %4, align 8
  %38 = getelementptr inbounds %struct.stack, %struct.stack* %37, i32 0, i32 1
  store i8** %36, i8*** %38, align 8
  %39 = load i64, i64* %5, align 8
  %40 = load %struct.stack*, %struct.stack** %4, align 8
  %41 = getelementptr inbounds %struct.stack, %struct.stack* %40, i32 0, i32 0
  store i64 %39, i64* %41, align 8
  %42 = load %struct.stack*, %struct.stack** %4, align 8
  %43 = getelementptr inbounds %struct.stack, %struct.stack* %42, i32 0, i32 2
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* %5, align 8
  %46 = icmp ugt i64 %44, %45
  br i1 %46, label %47, label %51

47:                                               ; preds = %23
  %48 = load i64, i64* %5, align 8
  %49 = load %struct.stack*, %struct.stack** %4, align 8
  %50 = getelementptr inbounds %struct.stack, %struct.stack* %49, i32 0, i32 2
  store i64 %48, i64* %50, align 8
  br label %51

51:                                               ; preds = %47, %23
  store i32 0, i32* %3, align 4
  br label %52

52:                                               ; preds = %51, %22, %12
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i8** @realloc(i8**, i64) #1

declare dso_local i32 @memset(i8**, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
